objects/PC_EngagementProgram__mdt.object
<CustomObject>
    <description>To store Engagement Programs with their program code.</description>
    <fields>
        <fullName>ACLS_Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Description__c</fullName>
        <description>Description of the Engagement Program</description>
        <inlineHelpText>Description of the Engagement Program</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_EngagementProgramCode__c</fullName>
        <description>Holds Engagement Program Code specified in the Engagement Program object</description>
        <inlineHelpText>Holds Engagement Program Code specified in the Engagement Program object</inlineHelpText>
        <label>Engagement Program Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the Engagement Program is active. Note that making it as inactive may render the associated setting also as inactive.</description>
        <inlineHelpText>Specifies whether the Engagement Program is active. Note that making it as inactive may render the associated setting also as inactive.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Engagement Program</label>
    <pluralLabel>Engagement Programs</pluralLabel>
</CustomObject>